I work at @stitchfix now!

--- a/about.haml
+++ b/about.haml
@@ -7,12 +7,13 @@ layout: default
   .markdown
     .intro
       :markdown
-        Hi, there! I'm a software engineer baking up awesome digital treats at
-        [Oven Bits](http://ovenbits.com) in Dallas. I'm not interested in
-        freelance work, but feel free to take a look at my [open source
-        projects][github]. I co-organize [Ruby FTW](http://rubyftw.org), the
-        Ruby enthuisast group of Fort Worth, which you (if you're located in the
-        area) should definitely come it check out&mdash;we have free pizza!
+        Hi, there! I'm a software engineer weaving code at [Stitch
+        Fix](http://stitchfix.com). Before that I was baking up awesome digital
+        treats at [Oven Bits](http://ovenbits.com) in Dallas.
+
+        I co-organize [Ruby FTW](http://rubyftw.org), the Ruby enthuisast group
+        of Fort Worth, Texas, which you (if you're located in the area) should
+        definitely come it check out&mdash;we have free pizza!
 
         [github]: https://github.com/philtr
 
