--- a/index.haml
+++ b/index.haml
@@ -9,7 +9,5 @@ styles:
   <img src="{% asset_path phillipridlen.svg %}">
 
   %p.intro
-    I'm a software engineer baking up awesome digital treats at
-    <a href="http://ovenbits.com">Oven Bits</a>.
-
-
+    I'm a software engineer weaving code at
+    <a href="http://stitchfix.com">Stitch Fix</a>.
