--- a/_assets/stylesheets/main.sass
+++ b/_assets/stylesheets/main.sass
@@ -16,25 +16,18 @@ h1.brand
   display: table
   font-size: 1.5rem
   line-height: 2rem
-  @media screen and (min-width: $breakpoint)
-    font-size: 2rem
-
-  a
-    display: table-cell
-    height: 100%
-    vertical-align: middle
 
 .breadcrumb
   .caret
-    display: table-cell
+    bottom: -0.1rem
+    display: inline-block
     color: $faded-text-color
-    padding: 0 0.5rem
-    vertical-align: middle
+    padding-left: 0.5rem
+    position: relative
   a
     color: $dim-text-color
     font-weight: 500
-    font-size: 1.2rem
-    vertical-align: middle
+    font-size: 75%
 
 a
   color: $primary-accent-color
