--- a/about.haml
+++ b/about.haml
@@ -29,9 +29,7 @@ layout: default
 
         * [Jekyll](http://jekyllrb.com) for generating the site
         * [Sass](http://sass-lang.com/) for coherent styles
-        * [s3_website](https://github.com/laurilehmijoki/s3_website) to deploy it to:
-          * [Amazon S3](http://aws.amazon.com/s3/) for static asset hosting
-          * [Amazon CloudFront](http://aws.amazon.com/cloudfront/) as a distribution network for super-fast responses
+        * [Netlify](https://www.netlify.com) for continuous deployment and hosting
 
       ---
 
