--- a/_assets/stylesheets/posts/list.sass
+++ b/_assets/stylesheets/posts/list.sass
@@ -19,7 +19,6 @@ ul.posts-list
 
   li
     display: table-row
-    line-height: $line-height-expanded
   li small
     color: $dim-text-color
     display: table-cell
@@ -28,6 +27,7 @@ ul.posts-list
   li a
     display: table-cell
     width: auto
+    padding-bottom: 0.5rem
   li aside
     display: none
     @media screen and (min-width: $breakpoint)
