--- a/_assets/stylesheets/main.sass
+++ b/_assets/stylesheets/main.sass
@@ -2,13 +2,15 @@
 
 html
   font-size: 16px
+  @media screen and (min-width: $breakpoint)
+    font-size: 18px
 
 body
   color: $primary-text-color
   font-size: $font-size-base
   padding: $gutter
   margin: 0 auto
-  max-width: 45rem
+  max-width: 48rem
   font-family: $sans-serif
   line-height: $line-height-base
 
