--- a/resources/kjhs-2016.haml
+++ b/resources/kjhs-2016.haml
@@ -145,17 +145,17 @@ permalink: /resources/kjhs/2016/index.html
 
   .gallery
     .gallery-item
-      %a{ href: "{% asset_path resources/kjhs/2016/hugs/original/hug1.jpg %}" }
-        %img{ src: "{% asset_path resources/kjhs/2016/hugs/thumb/hug1.jpg %}" }
+      %a{ href: "{{ assets['resources/kjhs/2016/hugs/original/hug1.jpg'].digest_path }}" }
+        %img{ src: "{{ assets['resources/kjhs/2016/hugs/thumb/hug1.jpg'].digest_path }}" }
     .gallery-item
-      %a{ href: "{% asset_path resources/kjhs/2016/hugs/original/hug2.jpg %}" }
-        %img{ src: "{% asset_path resources/kjhs/2016/hugs/thumb/hug2.jpg %}" }
+      %a{ href: "{{ assets['resources/kjhs/2016/hugs/original/hug2.jpg'].digest_path }}" }
+        %img{ src: "{{ assets['resources/kjhs/2016/hugs/thumb/hug2.jpg'].digest_path }}" }
     .gallery-item
-      %a{ href: "{% asset_path resources/kjhs/2016/hugs/original/hug3.jpg %}" }
-        %img{ src: "{% asset_path resources/kjhs/2016/hugs/thumb/hug3.jpg %}" }
+      %a{ href: "{{ assets['resources/kjhs/2016/hugs/original/hug3.jpg'].digest_path }}" }
+        %img{ src: "{{ assets['resources/kjhs/2016/hugs/thumb/hug3.jpg'].digest_path }}" }
     .gallery-item
-      %a{ href: "{% asset_path resources/kjhs/2016/hugs/original/hug4.jpg %}" }
-        %img{ src: "{% asset_path resources/kjhs/2016/hugs/thumb/hug4.jpg %}" }
+      %a{ href: "{{ assets['resources/kjhs/2016/hugs/original/hug4.jpg'].digest_path }}" }
+        %img{ src: "{{ assets['resources/kjhs/2016/hugs/thumb/hug4.jpg'].digest_path }}" }
     .gallery-item
-      %a{ href: "{% asset_path resources/kjhs/2016/hugs/original/hug5.jpg %}" }
-        %img{ src: "{% asset_path resources/kjhs/2016/hugs/thumb/hug5.jpg %}" }
+      %a{ href: "{{ assets['resources/kjhs/2016/hugs/original/hug5.jpg'].digest_path }}" }
+        %img{ src: "{{ assets['resources/kjhs/2016/hugs/thumb/hug5.jpg'].digest_path }}" }
