--- a/_includes/head/favicon.html
+++ b/_includes/head/favicon.html
@@ -1,4 +1,4 @@
-<link rel="apple-touch-icon-precomposed" href="{% asset_path favicon/favicon-180.png %}">
-<link rel="icon" href="{% asset_path favicon/favicon-180.png %}">
+<link rel="apple-touch-icon-precomposed" href="{{ assets['favicon/favicon-180.png'].digest_path }}">
+<link rel="icon" href="{{ assets['favicon/favicon-180.png'].digest_path }}">
 <meta name="msapplication-TileColor" content="#264E59">
-<meta name="msapplication-TileImage" content="{% asset_path favicon/favicon-180.png %}">
+<meta name="msapplication-TileImage" content="{{ assets['favicon/favicon-180.png'].digest_path }}">
