--- a/index.haml
+++ b/index.haml
@@ -6,7 +6,7 @@ styles:
 ---
 
 .mister-ridlen
-  <img src="{% asset_path phillipridlen.svg %}">
+  <img src="{{ assets['phillipridlen.svg'].digest_path }}">
 
   %p.intro
     I'm a software engineer weaving code at
