--- a/_includes/head/metadata.html
+++ b/_includes/head/metadata.html
@@ -4,8 +4,8 @@
 <meta property="og:url" content="{{ site.url }}{{ page.url }}" />
 <meta property="og:description" content="{{ page.description }}" />
 
-{% if page.image %}
-  <meta property="og:image" content="{{ site.url }}{{ assets['{{ page.image }}'].digest_path }}" />
+{% if assets[page.image] %}
+  <meta property="og:image" content="{{ site.url }}{{ assets[page.image].digest_path }}" />
 {% else %}
   <meta property="og:image" content="http://gravatar.com/avatar/a9afd72caf82c3b98c292a379f53228a?s=256" />
 {% endif %}
