--- a/_assets/css/_shared.sass
+++ b/_assets/css/_shared.sass
@@ -8,10 +8,11 @@ $secondary-accent-color:    #ab6748
 $primary-background-color:  #ffffff
 $dim-background-color:      #fbfaf8
 
-$serif:                     "Iowan Old Style", Georgia, serif
-$sans-serif:                Avenir, "Segoe UI", sans-serif
+$serif:                     "Palatino Linotype", Palatino, Palladio, "URW Palladio L", serif
+$sans-serif:                -apple-system, "Segoe UI", sans-serif
 $monospace:                 "SF Mono", Consolas, Menlo, monospace
 
+$font-size-base-px:         14px
 $font-size-base:            1rem
 $line-height-base:          1.6
 
