Use asset tag instead of path for front page svg

--- a/index.haml
+++ b/index.haml
@@ -6,7 +6,7 @@ styles:
 ---
 
 .mister-ridlen
-  <img src="{{ assets['phillipridlen.svg'].digest_path }}">
+  {% asset 'phillipridlen.svg' %}
 
   %p.intro
     I'm a software engineer weaving code at
