--- a/about.haml
+++ b/about.haml
@@ -11,24 +11,21 @@ layout: default
         Fix](http://stitchfix.com). Before that I was baking up awesome digital
         treats at [Oven Bits](http://ovenbits.com) in Dallas.
 
-        I co-organize [Ruby FTW](http://rubyftw.org), the Ruby enthuisast group
-        of Fort Worth, Texas, which you (if you're located in the area) should
-        definitely come it check out&mdash;we have free pizza!
-
-        [github]: https://github.com/philtr
-
         I occasionally [write a note or two](/notes/) on topics I'm passionate
         about. I'm also the youth director at [Burleson Bible
         Church](http://burlesonbible.org) for students in 7th-12th grade. I
         apologize in advance for the fart jokes.
 
+        I previously organized [Ruby FTW](http://rubyftw.org), the Ruby enthuisast group
+        of Fort Worth, Texas, but have since passed the torch on to others.
+        
     :markdown
       ---
 
       The tech stack for this website includes:
 
         * [Jekyll](http://jekyllrb.com) for generating the site
-        * [Sass](http://sass-lang.com/) for coherent styles
+        * [Sass](http://sass-lang.com/) for coherent stylesheets
         * [Netlify](https://www.netlify.com) for continuous deployment and hosting
 
       ---
