--- a/_layouts/bare.html
+++ b/_layouts/bare.html
@@ -18,6 +18,8 @@
 
     {% include head/favicon.html %}
     {% include head/metadata.html %}
+
+    <script src="https://embed.small.chat/T0T6AQH8BGAD5PJY1E.js" async></script>
   </head>
   <body>
     {{ content }}
