--- a/_layouts/bare.html
+++ b/_layouts/bare.html
@@ -18,6 +18,8 @@
 
     {% include head/favicon.html %}
     {% include head/metadata.html %}
+
+    <script src="https://cdn.rawgit.com/turbolinks/turbolinks/c61cad86f70686e7f1d85f4aee4c7ff0be9b2ef2/dist/turbolinks.js" async></script>
   </head>
   <body>
     {{ content }}
