Better date formatting and markup

--- a/_includes/post/date.html
+++ b/_includes/post/date.html
@@ -1,5 +1,5 @@
 <div class="post-date">
   <a href="{{ site.url }}{{ page.url }}" class="post-permalink">
-    <time datetime="{{ page.date }}">{{ page.date | date: "%B %d, %Y" }}</time>
+    <time datetime="{{ page.date | date: "%Y-%m-%d" }}">{{ page.date | date: "%A, %B %d, %Y" }}</time>
   </a>
 </div>
