--- a/_assets/css/posts.sass
+++ b/_assets/css/posts.sass
@@ -4,6 +4,7 @@
   font-size: 1.75rem
   line-height: 1.2
   margin-bottom: 0
+  font-weight: 900
 
   @media screen and (min-width: $breakpoint)
     font-size: 2.5rem
