--- a/_includes/post/title.html
+++ b/_includes/post/title.html
@@ -1,3 +1,6 @@
+{% if page.draft %}
+  <p class="post-draft-notice">DRAFT</p>
+{% endif %}
 <h1 class="post-title header-link">
   {% if page.type == "link" %}
     <a href="{{ page.link.source }}">{{ page.title }}</a>
