Update fonts (add BlinkMacSystemFont)

--- a/_assets/css/_shared.sass
+++ b/_assets/css/_shared.sass
@@ -8,8 +8,8 @@ $secondary-accent-color:    #ab6748
 $primary-background-color:  #ffffff
 $dim-background-color:      #fbfaf8
 
-$serif:                     "Palatino Linotype", Palatino, Palladio, "URW Palladio L", serif
-$sans-serif:                -apple-system, "Segoe UI", sans-serif
+$serif:                     Georgia, serif
+$sans-serif:                -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif
 $monospace:                 "SF Mono", Consolas, Menlo, monospace
 
 $font-size-base-px:         19px
