--- a/layouts/default.html
+++ b/layouts/default.html
@@ -1,16 +1,22 @@
-<!DOCTYPE HTML>
-<html lang="en">
+<!DOCTYPE html>
+<html>
   <head>
     <meta charset="utf-8">
     <title>A Freakin' Old Nanoc Site - <%= @item[:title] %></title>
 
     <!-- you don't need to keep this, but it's cool for stats! -->
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <meta name="viewport" content="initial-scale=1.0"/>
     <meta name="generator" content="Nanoc <%= Nanoc::VERSION %>">
 
+    <title><%= @item.attributes.fetch(:title) + " | " if @item.attributes[:title] %>Phillip Ridlen</title>
+
+    <link href="/css/main.css" rel="stylesheet" type="text/css">
+    <% @item.attributes.fetch(:styles, []).each do |style| %>
+    <link href="/css/<%= style %>.css" rel="stylesheet" type="text/css">
+    <% end %>
   </head>
   <body>
-    <div id="main">
-      <%= yield %>
-    </div>
+    <%= yield %>
   </body>
 </html>
