--- a/content/index.haml
+++ b/content/index.haml
@@ -6,7 +6,7 @@ styles:
 ---
 
 .mister-ridlen
-  {% asset 'phillipridlen.svg' %}
+  %img{src: "images/phillipridlen.svg"}
 
   %p.intro
     I'm a software engineer weaving code at
