--- a/layouts/default.html
+++ b/layouts/default.html
@@ -1,19 +1,3 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <meta name="viewport" content="initial-scale=1.0"/>
-    <meta name="generator" content="Nanoc <%= Nanoc::VERSION %>">
-
-    <title><%= @item.attributes.fetch(:title) + " | " if @item.attributes[:title] %>Phillip Ridlen</title>
-
-    <link href="/css/main.css" rel="stylesheet" type="text/css">
-    <% @item.attributes.fetch(:styles, []).each do |style| %>
-    <link href="/css/<%= style %>.css" rel="stylesheet" type="text/css">
-    <% end %>
-  </head>
-  <body>
-    <%= yield %>
-  </body>
-</html>
+<% render "/master.html" do %>
+  <%= yield %>
+<% end %>
