--- a/content/about.haml
+++ b/content/about.haml
@@ -1,6 +1,5 @@
 ---
 title: About Me
-layout: default
 ---
 
 %section.text
@@ -18,9 +17,9 @@ layout: default
 
         I previously organized [Ruby FTW](http://rubyftw.org), the Ruby enthuisast group
         of Fort Worth, Texas, but have since passed the torch on to others.
-        
+
     :markdown
       ---
 
       **Say hello:**  I try to respond to email within 48 hours. Feel free to
-      get in touch directly: <{{ site.email }}>.
+      get in touch directly: <#{@config[:email]}>.
