--- a/layouts/head.html
+++ b/layouts/head.html
@@ -23,10 +23,10 @@
 <meta property="og:url" content="{{ site.url }}{{ page.url }}" />
 <meta property="og:description" content="{{ page.description }}" />
 
-{% if assets[page.image] %}
-  <meta property="og:image" content="{{ site.url }}{{ assets[page.image].digest_path }}" />
-{% else %}
+<% if page_image = @item.attributes[:image] %>
+  <meta property="og:image" content="{{ site.url }}/images/<%= page_image %>" />
+<% else %>
   <meta property="og:image" content="http://gravatar.com/avatar/a9afd72caf82c3b98c292a379f53228a?s=256" />
-{% endif %}
+<% end %>
 
 <link rel="author" href="https://plus.google.com/102506368462184573833" />
