--- a/layouts/master.html
+++ b/layouts/master.html
@@ -1,4 +1,4 @@
-<% render "/bare.html" do %>
+<% render "/bare.html", layout_styles: @layout_styles do %>
 <div>
   <h1 class="brand">
     <a href="/">Phillip Ridlen</a>
