--- a/layouts/bare.html
+++ b/layouts/bare.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <%= render "/head.html" %>
+    <%= render "/head.html", layout_styles: @layout_styles %>
   </head>
   <body>
     <%= yield %>
