Post code blocks formatting and highlighting

--- a/content/css/code.scss
+++ b/content/css/code.scss
@@ -13,7 +13,7 @@ code {
   padding: 0 2px;
 }
 
-.highlight {
+pre.highlight {
   background: $dim-background-color;
   border-radius: $radius;
   margin: 0;
