--- a/content/about.haml
+++ b/content/about.haml
@@ -21,5 +21,5 @@ title: About Me
     :markdown
       ---
 
-      **Say hello:**  I try to respond to email within 48 hours. Feel free to
-      get in touch directly: <#{@config[:email]}>.
+      I try to respond to email within 48 hours. Feel free to get in touch
+      directly: <#{@config[:email]}>.
