Fix email on about page

--- a/content/about.haml
+++ b/content/about.haml
@@ -22,4 +22,4 @@ title: About Me
       ---
 
       I try to respond to email within 48 hours. Feel free to get in touch
-      directly: <#{@config[:email]}>.
+      directly: <#{site_config.email}>.
