Move Notes and About onto the Home page

--- a/content/css/posts/list.scss
+++ b/content/css/posts/list.scss
@@ -12,6 +12,33 @@ section.posts {
   }
 }
 
+.posts-categories {
+  @media screen and (min-width: $breakpoint-large) {
+    display: flex;
+    flex-flow: column wrap;
+    align-content: space-between;
+    height: 40rem;
+
+    &::before,
+    &::after {
+      content: "";
+      flex-basis: 100%;
+      width: 0;
+      order: 2;
+    }
+  }
+}
+
+.posts-category {
+  @media screen and (min-width: $breakpoint-large) {
+    width: 19rem;
+    margin-right: 2rem;
+
+    &:nth-child(2n+1) { order: 1; }
+    &:nth-child(2n)   { order: 2; }
+  }
+}
+
 ul.posts-list {
   display: table;
   list-style-type: none;
@@ -40,7 +67,7 @@ ul.posts-list {
   li aside {
     display: none;
 
-    @media screen and (min-width: $breakpoint) {
+    @media screen and (min-width: $breakpoint-medium) {
       color: $dim-text-color;
       display: table-cell;
       padding-left: $gutter;
