--- a/content/css/_shared.scss
+++ b/content/css/_shared.scss
@@ -12,10 +12,11 @@ $serif: Georgia, serif;
 $sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
 $monospace: "SF Mono", Consolas, Menlo, monospace;
 
-$font-size-base-px: 19px;
+$font-size-base-px: 16px;
 $font-size-base: 1rem;
 $line-height-base: 1.4;
 
-$breakpoint: 35rem;
+$breakpoint-large: 50rem;
+$breakpoint-medium: 35rem;
 $radius: 0.5rem;
 $gutter: 2rem;
