--- a/content/css/main.scss
+++ b/content/css/main.scss
@@ -69,7 +69,7 @@ footer {
     text-align: center;
   }
 
-  @media screen and (min-width: $breakpoint) {
+  @media screen and (min-width: $breakpoint-medium) {
     p {
       float: left;
     }
