--- a/content/css/posts.scss
+++ b/content/css/posts.scss
@@ -6,7 +6,7 @@
   margin-bottom: 0;
   font-weight: 900;
 
-  @media screen and (min-width: $breakpoint) {
+  @media screen and (min-width: $breakpoint-medium) {
     font-size: 2.5rem;
     margin-bottom: 1rem;
     max-width: 75%;
