--- a/content/css/_shared.scss
+++ b/content/css/_shared.scss
@@ -1,12 +1,12 @@
-$primary-text-color: #41323f;
-$dim-text-color: #b9b6b0;
+$primary-text-color: #41324f;
+$dim-text-color: #b9b6c0;
 $faded-text-color: #eeedeb;
 
-$primary-accent-color: #41a186;
-$secondary-accent-color: #ab6748;
+$primary-accent-color: #39c4b2;
+$secondary-accent-color: #ab6788;
 
 $primary-background-color: #ffffff;
-$dim-background-color: #fbfaf8;
+$dim-background-color: #fbfaff;
 
 $serif: Georgia, serif;
 $sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
@@ -14,7 +14,7 @@ $monospace: "SF Mono", Consolas, Menlo, monospace;
 
 $font-size-base-px: 16px;
 $font-size-base: 1rem;
-$line-height-base: 1.4;
+$line-height-base: 1.5;
 
 $breakpoint-large: 50rem;
 $breakpoint-medium: 35rem;
