--- a/content/css/home.scss
+++ b/content/css/home.scss
@@ -1,5 +1,11 @@
 .mister-ridlen {
-  float: left;
-  width: 31%;
-  margin-right: 2%;
+  img {
+    float: left;
+    width: 32%;
+    margin-right: 1%;
+  }
+
+  & + hr {
+    clear: left;
+  }
 }
