--- a/content/css/home.scss
+++ b/content/css/home.scss
@@ -1,15 +1,24 @@
+@import "shared";
+
 .mister-ridlen {
   img {
-    float: left;
-    width: 32%;
+    max-height: 25vh;
   }
 
-  & + hr {
-    clear: left;
-  }
+  @media screen and (min-width: $breakpoint-medium) {
+    $side: right;
 
-  .text {
-    margin-left: 32%;
-    padding-left: 1rem;
+    img {
+      float: $side;
+      width: 33%;
+      max-height: 75vh;
+
+      @if $side == left { padding-right: $gutter; }
+      @else { padding-left: $gutter; }
+    }
+
+    & + hr {
+      clear: $side;
+    }
   }
 }
