Add anchors to index for redirecs

--- a/content/index.haml
+++ b/content/index.haml
@@ -9,7 +9,7 @@ styles:
 .mister-ridlen
   %img{src: "images/phillipridlen.svg"}
 
-  %section.text
+  %section#about.text
     .markdown
       .intro
         :markdown
@@ -28,7 +28,7 @@ styles:
 
 %hr
 
-%h1 Notes
+%h1#notes Notes
 
 %section.posts
   %p.intro
