Make dim text accessible-friendly

--- a/content/css/_shared.scss
+++ b/content/css/_shared.scss
@@ -1,5 +1,5 @@
 $primary-text-color: #41324f;
-$dim-text-color: #b9b6c0;
+$dim-text-color: #716d7e;
 $faded-text-color: #eeedeb;
 
 $primary-accent-color: #39c4b2;
