--- a/content/css/_shared.scss
+++ b/content/css/_shared.scss
@@ -9,10 +9,10 @@ $primary-background-color: #ffffff;
 $dim-background-color: #fbfaff;
 
 $serif: Georgia, serif;
-$sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+$sans-serif: Avenir, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
 $monospace: "SF Mono", Consolas, Menlo, monospace;
 
-$font-size-base-px: 16px;
+$font-size-base-px: 15px;
 $font-size-base: 1rem;
 $line-height-base: 1.5;
 
