Update index about me

--- a/content/index.haml
+++ b/content/index.haml
@@ -1,6 +1,6 @@
 ---
 layout: master
-description: "I'm a software engineer baking up awesome digital treats in Texas."
+description: "I'm a software engineer weaving code in Texas."
 styles:
   - home
 ---
@@ -12,24 +12,23 @@ styles:
     .markdown
       .intro
         :markdown
-          Hi, there! I'm a software engineer weaving code at [Stitch
-          Fix](http://stitchfix.com). Before that I was baking up awesome digital
-          treats at [Oven Bits](http://ovenbits.com) in Dallas.
+          Hi, there! This is my website. I'm a follower of Christ, husband to my
+          beautiful wife, and father to [three][b] [wonderful][h] [kids][l]. I
+          make a living as a software engineer, solving business problems
+          (sometimes with software).
 
-          I occasionally [write a note or two](/notes/) on topics I'm passionate
-          about. I'm also the youth director at [Burleson Bible
-          Church](http://burlesonbible.org) for students in 7th-12th grade. I
-          apologize in advance for the fart jokes.
+          Every once in a while, I get the itch to [write a note][notes], but
+          there are very few I'm actually proud of. Many of my articles are barely
+          more than links to other, better articles, and the rest are short and
+          unpolished.
 
-          I previously organized [Ruby FTW](http://rubyftw.org), the Ruby enthuisast group
-          of Fort Worth, Texas, but have since passed the torch on to others.
-
-
-%hr
+          [b]: http://bennettalexander.co
+          [h]: http://hudsonkruse.co
+          [l]: http://legacyrose.co
+          [notes]: /notes/
 
 :markdown
   ---
 
   I try to respond to email within 48 hours. Feel free to get in touch
   directly: <#{site_config.email}>.
-
