--- a/content/index.haml
+++ b/content/index.haml
@@ -9,23 +9,24 @@ styles:
   %img{src: "images/phillipridlen.svg"}
 
   %section#about.text
-    .markdown
-      .intro
-        :markdown
-          Hi, there! This is my website. I'm a follower of Christ, husband to my
-          beautiful wife, and father to [three][b] [wonderful][h] [kids][l]. I
-          make a living as a software engineer, solving business problems
-          (sometimes with software).
+    .intro
+      :markdown
+        Hi, there! This is my website. I'm a follower of Christ, husband to my
+        beautiful wife, and father to [three][b] [wonderful][h] [kids][l]. I
+        make a living as a software engineer, solving business problems
+        (sometimes with software).
 
-          Every once in a while, I get the itch to [write a note][notes], but
-          there are very few I'm actually proud of. Many of my articles are barely
-          more than links to other, better articles, and the rest are short and
-          unpolished.
+        If you're wondering what I'm currently up to, visit my [now page][now].
 
-          [b]: http://bennettalexander.co
-          [h]: http://hudsonkruse.co
-          [l]: http://legacyrose.co
-          [notes]: /notes/
+        Every once in a great while, I get the itch to [write a note][notes] on
+        topics that I care about. My opinions are my own and do not necessarily
+        reflect those of my employer.
+
+        [b]: http://bennettalexander.co
+        [h]: http://hudsonkruse.co
+        [l]: http://legacyrose.co
+        [notes]: /notes/
+        [now]: /now/
 
 :markdown
   ---
