--- a/content/legacyrose.haml
+++ b/content/legacyrose.haml
@@ -3,4 +3,4 @@ layout: master
 ---
 
 %center
-  %img{src: "/images/legacyrose.co.png", style: "max-width: 100%; max-height: 60vh"}
+  %img{src: "/images/legacyrose.co.png", style: "max-width: 100%; max-height: 60vh", alt: "We adopt because He adopted first. Ephesians 1:3-5 ♥ Legacy Rose. February 21, 2020."}
