--- a/content/church-livestream-audio-video-resources.erb
+++ b/content/church-livestream-audio-video-resources.erb
@@ -1,14 +1,8 @@
-<style>
-  .comment { margin-bottom: 2rem }
-  .comment p { margin: 1rem 0; }
-
-  .title { font-size: 2rem; font-weight: 900 }
-
-  .c6 { margin-left: 2rem; }
-  .c11 { margin-left: 4rem; }
-</style>
-
-<div class=".comment">
+---
+styles:
+ - google_doc
+---
+<div class="comment">
   <p class="intro">
       Given the recent need for churches everywhere to invest time, effort, and
       money into livestreaming their worship service, having a list of recommended
@@ -19,4 +13,6 @@
   <p><em>Last updated <%= site_time.to_s(:rfc822) %>.</em></p>
 </div>
 
-<%= church_av_resources %>
+<div id="google-doc">
+  <%= church_av_resources %>
+</div>
