Add title and description for livestream resources

--- a/content/church-livestream-audio-video-resources.erb
+++ b/content/church-livestream-audio-video-resources.erb
@@ -1,4 +1,6 @@
 ---
+title: "Church Livestream Audio/Video Resources"
+description: "Given the recent need for churches everywhere to invest time, effort, and money into livestreaming their worship service, having a list of recommended resources could come in handy. This page is regularly updated from the publicly-editable Google Doc."
 styles:
  - google_doc
 ---
