--- a/content/css/google_doc.scss
+++ b/content/css/google_doc.scss
@@ -9,13 +9,7 @@
   * { font-family: $sans-serif !important }
   ul { list-style-type: disc !important }
   li::before { content: ''; }
-
-  li {
-    line-height: inherit !important;
-  }
-
-  a {
-    color: $primary-accent-color !important;
-  }
+  li, p { line-height: inherit !important; }
+  a { color: $primary-accent-color !important; }
 }
 
