Apparently .comment gets filtered out by some adblockers

--- a/content/church-livestream-audio-video-resources.erb
+++ b/content/church-livestream-audio-video-resources.erb
@@ -4,7 +4,7 @@ description: "Given the recent need for churches everywhere to invest time, effo
 styles:
  - google_doc
 ---
-<div class="comment">
+<div class="page-description">
   <p class="intro">
       Given the recent need for churches everywhere to invest time, effort, and
       money into livestreaming their worship service, having a list of recommended
