Make the google doc helper method more generic

--- a/content/church-livestream-audio-video-resources.erb
+++ b/content/church-livestream-audio-video-resources.erb
@@ -14,6 +14,4 @@ styles:
   </p>
 </div>
 
-<div id="google-doc">
-  <%= church_av_resources %>
-</div>
+<%= google_doc_content("https://docs.google.com/document/d/e/2PACX-1vQy9mIg73kxkN2tG9u1N4svmeuJ2Q2Kn4RhhrhaEWEMbX1wBjsFCAL1oEKDWAxlsgccrrwQa8dozrzE/pub") %>
