--- a/content/index.haml
+++ b/content/index.haml
@@ -6,8 +6,6 @@ styles:
 ---
 
 .mister-ridlen
-  %img{src: "images/phillipridlen.svg"}
-
   %section#about.text
     .intro
       :markdown
@@ -27,6 +25,25 @@ styles:
         [l]: http://legacyrose.co
         [notes]: /notes/
         [now]: /now/
+
+%section#latest
+  .latest-updates
+    .update
+      .update-title Church Livestream A/V Resources
+      .update-teaser
+        %p
+          Given the recent need for churches everywhere to invest time, effort,
+          and money into livestreaming their worship service, having a list of
+          recommended resources could come in handy.
+        %p= link_to("View the Resources &rarr;", "/church-livestream-audio-video-resources/")
+
+    .update
+      .update-title Coronavirus Status
+      .update-teaser
+        %center
+          %span.huge 🏡
+          %br
+          OK; Staying Home
 
 :markdown
   ---
