keep grid on mobile but make it 1col

--- a/content/css/home.scss
+++ b/content/css/home.scss
@@ -2,6 +2,10 @@
 
 .latest-updates {
   margin-top: 1rem;
+  
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-gap: 1rem;
 
   .update {
     background-color: fade-out($faded-text-color, 0.5);
@@ -15,8 +19,6 @@
   }
   
   @media screen and (min-width: $breakpoint-medium) {
-    display: grid;
     grid-template-columns: 2fr 1fr;
-    grid-gap: 1rem;
   }
 }
