make padding consistent with grid gap

--- a/content/css/home.scss
+++ b/content/css/home.scss
@@ -9,7 +9,7 @@
 
   .update {
     background-color: fade-out($faded-text-color, 0.5);
-    padding: 1rem 2rem;
+    padding: 1rem;
     border-radius: 0.25rem;
   }
 
