--- a/content/css/home.scss
+++ b/content/css/home.scss
@@ -2,19 +2,23 @@
 
 .latest-updates {
   margin-top: 1rem;
-
+  
   display: grid;
-  grid-template-columns: 2fr 1fr;
+  grid-template-columns: 1fr;
   grid-gap: 1rem;
 
   .update {
     background-color: fade-out($faded-text-color, 0.5);
-    padding: 1rem 2rem;
+    padding: 1rem;
     border-radius: 0.25rem;
   }
 
   .update-title {
     font-weight: bold;
     margin-bottom: 1rem;
+  }
+  
+  @media screen and (min-width: $breakpoint-medium) {
+    grid-template-columns: 2fr 1fr;
   }
 }
