--- a/content/church-livestream-audio-video-resources.erb
+++ b/content/church-livestream-audio-video-resources.erb
@@ -8,7 +8,7 @@ styles:
   <p class="intro">
       Given the recent need for churches everywhere to invest time, effort, and
       money into livestreaming their worship service, having a list of recommended
-      resources could come in handy. This page is updated every 15 minutes from the
+      resources could come in handy. This page is updated once an hour from the
       publicly-editable
       <a href="https://docs.google.com/document/d/1LJ7Gd1riOXBQaogUdNmkLPdnIWypnUeZpMniATvVWuI/edit#">Google Doc</a>.
   </p>
