Breathing room for list items

--- a/content/css/main.scss
+++ b/content/css/main.scss
@@ -58,6 +58,10 @@ img {
   max-width: 100%;
 }
 
+li {
+  margin-bottom: 0.5rem;
+}
+
 footer {
   color: $dim-text-color;
   padding: 0 0 $gutter 0;
