--- a/content/index.haml
+++ b/content/index.haml
@@ -15,8 +15,9 @@ description: "I'm a software engineer weaving code in Texas."
         If you're wondering what I'm currently up to, visit my [now page][now].
 
         Every once in a great while, I get the itch to [write a note][notes] on
-        topics that I care about. My opinions are my own and do not necessarily
-        reflect those of my employer.
+        topics that I care about. Any opinions recorded here are my own and do
+        not necessarily reflect those of my employer, church, or even my current
+        beliefs and values.
 
         [b]: http://bennettalexander.co
         [h]: http://hudsonkruse.co
