--- a/content/css/_shared.scss
+++ b/content/css/_shared.scss
@@ -4,6 +4,7 @@ $faded-text-color: #eeedeb;
 
 $primary-accent-color: #39c4b2;
 $secondary-accent-color: #ab6788;
+$tertiary-accent-color: #c5388c;
 
 $primary-background-color: #ffffff;
 $dim-background-color: #fbfaff;
