Use tertiary accent color for operators and parens

--- a/content/css/code.scss
+++ b/content/css/code.scss
@@ -29,7 +29,7 @@ pre.highlight {
   .ge, .gh, .gp, .gs, .gu,
   .kc, .kd, .kn, .kr, .ow,
   .p, .o, .k {
-    color: $dim-text-color;
+    color: $tertiary-accent-color;
   }
 
   .k, .ne, .ni, .nn, .nt,
