Use 2008 as starting year for Copyright

--- a/layouts/master.html
+++ b/layouts/master.html
@@ -8,7 +8,7 @@
   </div>
   <hr>
   <footer>
-    <p>Copyright &copy; <%= Time.now.year %> Phillip Ridlen.</p>
+    <p>Copyright &copy; 2008&ndash;<%= Time.now.year %> Phillip Ridlen.</p>
     <% if navigation_items.any? %>
       <table>
         <tr>
