--- a/layouts/master.html
+++ b/layouts/master.html
@@ -9,6 +9,9 @@
   <hr>
   <footer>
     <p>Copyright &copy; 2008&ndash;<%= Time.now.year %> Phillip Ridlen.</p>
+    <aside>
+      Version <span class="revision"><%= site_version %></span>
+    </aside>
   </footer>
 </div>
 <% end %>
