--- a/content/css/_shared.scss
+++ b/content/css/_shared.scss
@@ -1,5 +1,6 @@
 $primary-text-color: #41324f;
 $dim-text-color: #716d7e;
+$pale-text-color: #afabba;
 $faded-text-color: #eeedeb;
 
 $primary-accent-color: #39c4b2;
