--- a/layouts/photo.html
+++ b/layouts/photo.html
@@ -1,12 +1,13 @@
 <% render "/default.html", layout_styles: ["posts", "photos"] do %>
   <div class="photo">
-    <h1 class="post-title header-link"><%= link_to @item[:title], @item.path(rep: :html) %></h1>
+    <h1 class="post-title header-link"><%= link_to @item[:title], @item.path %></h1>
     <div class="post-date">
       <time datetime="<%= @item[:date].strftime("%Y-%m-%d %H:%M") %>">
         <%= link_to @item[:date].strftime("%A, %B %d, %Y, %-I:%M%P"), @item, class: "post-permalink" %>
       </time>
     </div>
-    <img src="<%= @item.path(rep: :raw) %>">
+    <p><%= yield %></p>
+    <img src="<%= @item.path(rep: :original) %>">
     <figcaption>
         <%= @item[:camera] %> <%= @item[:lens] %><br>
         <%= @item[:f_stop] %>, <%= @item[:exposure] %>, ISO <%= @item[:iso] %>
