--- a/content/index.haml
+++ b/content/index.haml
@@ -10,7 +10,8 @@ description: "I'm a software engineer weaving code in Texas."
         Hi, there! This is my website. I'm a follower of Christ, husband to my
         beautiful wife, and father to [three][b] [wonderful][h] [kids][l]. I
         make a living as a software engineer, solving business problems
-        (sometimes with software).
+        (sometimes with software). I've also taken a few [photos] that I'm proud
+        of.
 
         If you're wondering what I'm currently up to, visit my [now page][now].
 
@@ -24,6 +25,7 @@ description: "I'm a software engineer weaving code in Texas."
         [l]: http://legacyrose.co
         [notes]: /notes/
         [now]: /now/
+        [photos]: /photos/
 
 :markdown
   ---
