--- a/layouts/master.html
+++ b/layouts/master.html
@@ -1,5 +1,5 @@
 <% render "/bare.html", layout_styles: @layout_styles do %>
-<div>
+<div class="container <%= @body_classes&.join(" ") %>">
   <h1 class="brand">
     <a href="/">Phillip Ridlen</a>
   </h1>
