--- a/content/css/photos.scss
+++ b/content/css/photos.scss
@@ -27,9 +27,11 @@
   }
 
   figcaption {
+    margin-top: 1rem;
     color: $dim-text-color;
     font-family: $sans-serif;
     font-size: 1rem;
+    font-variant-caps: all-small-caps;
     text-align: center;
   }
 }
