--- a/content/css/photos.scss
+++ b/content/css/photos.scss
@@ -27,11 +27,12 @@
   }
 
   figcaption {
-    margin-top: 1rem;
+    background-color: $dim-background-color;
     color: $dim-text-color;
     font-family: $sans-serif;
-    font-size: 1rem;
-    font-variant-caps: all-small-caps;
+    font-size: 0.8rem;
     text-align: center;
+    text-shadow 1px 1px white;
+    text-transform: uppercase;
   }
 }
