--- a/content/css/photos.scss
+++ b/content/css/photos.scss
@@ -32,7 +32,7 @@
     font-family: $sans-serif;
     font-size: 0.8rem;
     text-align: center;
-    text-shadow 1px 1px white;
+    text-shadow: 1px 1px white;
     text-transform: uppercase;
   }
 }
