--- a/content/css/photos.scss
+++ b/content/css/photos.scss
@@ -27,6 +27,7 @@
   }
 
   figcaption {
+    margin-top: 0.5rem;
     padding: 1rem;
     background-color: $dim-background-color;
     color: $dim-text-color;
