--- a/content/css/photos.scss
+++ b/content/css/photos.scss
@@ -27,9 +27,14 @@
   }
 
   figcaption {
+    margin-top: 0.5rem;
+    padding: 1rem;
+    background-color: $dim-background-color;
     color: $dim-text-color;
     font-family: $sans-serif;
-    font-size: 1rem;
+    font-size: 0.8rem;
     text-align: center;
+    text-shadow: 1px 1px white;
+    text-transform: uppercase;
   }
 }
