--- a/content/css/_shared.scss
+++ b/content/css/_shared.scss
@@ -11,12 +11,12 @@ $primary-background-color: #ffffff;
 $dim-background-color: #fbfaff;
 
 $serif: Georgia, serif;
-$sans-serif: Avenir, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-$monospace: "SF Mono", Consolas, Menlo, monospace;
+$sans-serif: "DM Sans", Avenir, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+$monospace: "Source Code Pro", "SF Mono", Consolas, Menlo, monospace;
 
 $font-size-base-px: 15px;
 $font-size-base: 1rem;
-$line-height-base: 1.5;
+$line-height-base: 1.6;
 
 $breakpoint-large: 50rem;
 $breakpoint-medium: 35rem;
